--- a/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/board/main_screen.html
+++ b/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/board/main_screen.html
@@ -1,5 +1,11 @@
 <fieldset>
     <h1>메인화면</h1>
+    <a href="http://127.0.0.1:8000/oauth/login/google">
+        <button>
+            Google로그인
+        </button>
+    </a>
+
 </fieldset>
 <br>
 {% if board_list %}
