--- a/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/oauth/login.html
+++ b/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/oauth/login.html
@@ -14,6 +14,9 @@
     <br>
     비밀번호<br>
     <input type="text" name="password" placeholder="pw를 입력하세요">
+    <br>
+    이메일<br>
+    <input type="text" name="email" placeholder="email을 입력하세요">
 
   </fieldset>
   <button type="submit">로그인</button>
