--- a/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/user/login.html
+++ b/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/user/login.html
@@ -17,6 +17,10 @@
 
   </fieldset>
   <button type="submit">로그인</button>
+  <label>
+    <input type="checkbox" name="remember_session"/>
+    <span>로그인 상태 유지</span>
+</label>
 </form>
 </body>
 </html>
