--- a/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/board/main_screen.html
+++ b/StudyFileForCafe/ChoiYunHo/Cafe_oauth/templates/board/main_screen.html
@@ -1,3 +1,8 @@
+{% load static %}
+<head>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+</head>
+<body>
 <fieldset>
     <h1>메인화면</h1>
     <a href="http://127.0.0.1:8000/oauth/login/google">
@@ -26,3 +31,4 @@
     <br><br>
     <button type="submit">게시판 생성</button>
 </form>
+</body>
